[gd_scene load_steps=11 format=3 uid="uid://v4ksu7jwy7fn"]

[ext_resource type="Script" path="res://Scripts/TrackPlayer.gd" id="1_w4wli"]
[ext_resource type="PackedScene" uid="uid://b7lb2ws1lt0r3" path="res://Scenes/Ball.tscn" id="2_2ytfu"]
[ext_resource type="PackedScene" uid="uid://ow51gqkh6ids" path="res://Assets/Floor.dae" id="3_4g3qy"]
[ext_resource type="ArrayMesh" uid="uid://cnjgqfv7jpr1b" path="res://Assets/Clouds/Cloud1.obj" id="4_2ip0m"]
[ext_resource type="ArrayMesh" uid="uid://bo8svob51p5qi" path="res://Assets/Clouds/Cloud2.obj" id="5_kdw2f"]
[ext_resource type="ArrayMesh" uid="uid://cli0pq8rk4jkj" path="res://Assets/Clouds/Cloud3.obj" id="6_ujvuq"]
[ext_resource type="Theme" uid="uid://b5nx78qe50cv0" path="res://Assets/Theme_1.tres" id="7_wi0ui"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_geudo"]
sky_top_color = Color(0, 0.424625, 0.890654, 1)
sky_horizon_color = Color(0, 0.741829, 0.794995, 1)
sky_curve = 0.178381
sky_energy_multiplier = 0.7
ground_bottom_color = Color(1.62441e-07, 0.098056, 0.133979, 1)
ground_horizon_color = Color(0, 0.741829, 0.794995, 1)
ground_curve = 0.251067
ground_energy_multiplier = 0.7

[sub_resource type="Sky" id="Sky_7n0yd"]
sky_material = SubResource("ProceduralSkyMaterial_geudo")

[sub_resource type="Environment" id="Environment_d1g3h"]
background_mode = 2
sky = SubResource("Sky_7n0yd")

[node name="TrackPlayer" type="Node3D"]
script = ExtResource("1_w4wli")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.489158, -0.870229, 0.0585317, 0.780479, 0.466689, 0.415998, -0.38933, -0.157806, 0.90748, 0, 0, 0)
light_color = Color(0.844923, 0.680871, 0.5383, 1)
light_energy = 3.0
shadow_enabled = true
shadow_blur = 1.417

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.489158, 0.870229, -0.0585319, 0.828748, 0.48466, 0.279788, 0.271848, 0.0883525, -0.958276, 0, 0, 0)
light_color = Color(0.844923, 0.680871, 0.5383, 1)
shadow_blur = 1.417
sky_mode = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_d1g3h")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LoadButton" type="Button" parent="CanvasLayer"]
offset_left = 13.0
offset_top = 62.0
offset_right = 105.0
offset_bottom = 124.0
text = "Load"

[node name="LoadDialog" type="ConfirmationDialog" parent="CanvasLayer"]
title = "Load File?"
position = Vector2i(0, 36)
size = Vector2i(413, 106)
ok_button_text = "Load File"
dialog_text = "Loading a level will discard any changes to this one.
Proceed?"

[node name="LoadFileSelectorDialog" type="FileDialog" parent="CanvasLayer"]
title = "Open a File"
position = Vector2i(100, 74)
size = Vector2i(1000, 500)
ok_button_text = "Open"
file_mode = 0

[node name="Player" parent="." instance=ExtResource("2_2ytfu")]

[node name="AddedBlocksRoot" type="Node3D" parent="."]
transform = Transform3D(6, 0, 0, 0, 6, 0, 0, 0, 6, 0, -15, 0)

[node name="Floor" parent="." instance=ExtResource("3_4g3qy")]
transform = Transform3D(0.1, 0, 0, 0, -0.1, 8.74228e-09, 0, -8.74228e-09, -0.1, 0, -1, 0)

[node name="Clouds" type="Node3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)
visible = false

[node name="Cloud1" type="MeshInstance3D" parent="Clouds"]
transform = Transform3D(0.363999, 0, -0.67156, 0, 0.699113, 0, 0.646706, 0, 0.377988, 8.08085, 9.31929, 1.46716)
mesh = ExtResource("4_2ip0m")
skeleton = NodePath("../Cloud4")

[node name="Cloud2" type="MeshInstance3D" parent="Clouds"]
transform = Transform3D(0.363999, 0, -0.67156, 0, 0.699113, 0, 0.646706, 0, 0.377988, 7.50195, 9.31929, -7.25392)
mesh = ExtResource("5_kdw2f")
skeleton = NodePath("../Cloud4")

[node name="Cloud3" type="MeshInstance3D" parent="Clouds"]
transform = Transform3D(0.363999, 0, -0.67156, 0, 0.699113, 0, 0.646706, 0, 0.377988, -5.77754, 9.31929, 9.15787)
mesh = ExtResource("6_ujvuq")
skeleton = NodePath("../Cloud4")

[node name="Cloud4" type="MeshInstance3D" parent="Clouds"]
transform = Transform3D(0.520793, 0, 0, 0, 0.350003, 0, 0, 0, 0.520793, 16.6637, 7.15993, 0.303261)
mesh = ExtResource("4_2ip0m")
skeleton = NodePath("../../..")

[node name="Cloud5" type="MeshInstance3D" parent="Clouds"]
transform = Transform3D(0.520793, 0, 0, 0, 0.350003, 0, 0, 0, 0.520793, -2.0223, 7.15993, -1.60658)
mesh = ExtResource("5_kdw2f")
skeleton = NodePath("../../..")

[node name="Cloud6" type="MeshInstance3D" parent="Clouds"]
transform = Transform3D(0.520793, 0, 0, 0, 0.350003, 0, 0, 0, 0.520793, 4.34421, 7.15993, 11.1175)
mesh = ExtResource("6_ujvuq")
skeleton = NodePath("../../..")

[node name="Cloud7" type="MeshInstance3D" parent="Clouds"]
transform = Transform3D(0.271225, 0, 0, 0, 0.252622, 0, 0, 0, 0.271225, -2.61878, 9.66593, -9.5708)
mesh = ExtResource("6_ujvuq")
skeleton = NodePath("../..")

[node name="Cloud8" type="MeshInstance3D" parent="Clouds"]
transform = Transform3D(-0.414585, 0, -0.401459, 0, 0.488759, 0, 0.392019, 0, -0.409272, -11.443, 13.3707, -10.5182)
mesh = ExtResource("6_ujvuq")
skeleton = NodePath("../Cloud4")

[node name="Cloud9" type="MeshInstance3D" parent="Clouds"]
transform = Transform3D(-0.301807, 0, -0.498289, 0, 0.488759, 0, 0.479847, 0, -0.291427, -10.3493, 15.8345, -4.27713)
mesh = ExtResource("4_2ip0m")
skeleton = NodePath("../Cloud4")

[node name="FinishedScreen" type="CanvasLayer" parent="."]
visible = false

[node name="Level Cleared" type="Label" parent="FinishedScreen"]
offset_left = 256.0
offset_top = 35.0
offset_right = 864.0
offset_bottom = 159.0
theme_override_font_sizes/font_size = 88
text = "Level Cleared!"

[node name="Well Done" type="Label" parent="FinishedScreen"]
offset_left = 433.0
offset_top = 152.0
offset_right = 614.0
offset_bottom = 201.0
theme_override_font_sizes/font_size = 35
text = "Well Done!"

[node name="Continue" type="Button" parent="FinishedScreen"]
offset_left = 452.0
offset_top = 209.0
offset_right = 576.0
offset_bottom = 254.0
theme = ExtResource("7_wi0ui")
text = "Continue"

[connection signal="pressed" from="CanvasLayer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="confirmed" from="CanvasLayer/LoadDialog" to="." method="_on_load_dialog_confirmed"]
[connection signal="file_selected" from="CanvasLayer/LoadFileSelectorDialog" to="." method="_on_load_file_selector_dialog_file_selected"]
[connection signal="level_finished" from="Player" to="." method="_on_player_level_finished"]
[connection signal="pressed" from="FinishedScreen/Continue" to="." method="_on_continue_pressed"]
